--- a/index.html
+++ b/index.html
@@ -399,12 +399,13 @@ document.write(`
 
 <script>
 var firebase_config={
-apiKey:"AIzaSyDkW--iV30bddiY18tq_L0R5l0ysWqu_tA",
-authDomain:"iya-christmas-wish.firebaseapp.com",
-projectId:"iya-christmas-wish",
-storageBucket:"iya-christmas-wish.firebasestorage.app",
-messagingSenderId:"94208728014",
-appId:"1:94208728014:web:7573849854d73a134ea99f"
+  apiKey: "AIzaSyCHYQXC8A0dbUwGjdf3qMDlTS55YDw-4ts",
+  authDomain: "iya-valentine-wishlist.firebaseapp.com",
+  projectId: "iya-valentine-wishlist",
+  storageBucket: "iya-valentine-wishlist.firebasestorage.app",
+  messagingSenderId: "572274365203",
+  appId: "1:572274365203:web:cce42d71b6330ca8d600e6",
+  measurementId: "G-4CRNLJWDNB"
 };
 firebase.initializeApp(firebase_config);
 var db=firebase.firestore();
@@ -521,6 +522,7 @@ p2.style.transform=`translateY(${y*0.12}px) rotate(34deg)`;
 p4.style.transform=`translateY(${y*0.07}px) rotate(18deg)`;
 p3.style.transform=`translateY(${y*0.06}px) rotate(-25deg)`;
 });
+/* designed by ChatGPT*/
 </script>
 
 </body>
