--- a/index.html
+++ b/index.html
@@ -404,6 +404,7 @@ apiKey:"AIzaSyDkW--iV30bddiY18tq_L0R5l0ysWqu_tA",
 authDomain:"iya-christmas-wish.firebaseapp.com",
 projectId:"iya-christmas-wish",
 storageBucket:"iya-christmas-wish.firebasestorage.app",
+storageBucket:"iya-christmas-wish.appspot.com",
 messagingSenderId:"94208728014",
 appId:"1:94208728014:web:7573849854d73a134ea99f",
 measurementId:"G-Z7Z6ZRB9PH"
