--- a/index.html
+++ b/index.html
@@ -572,7 +572,26 @@ p2.style.transform="translateY("+(y*0.12)+"px) rotate(34deg)";
 p4.style.transform="translateY("+(y*0.07)+"px) rotate(18deg)";
 p3.style.transform="translateY("+(y*0.06)+"px) rotate(-25deg)";
 });
+  
+/* ❤️ falling hearts background */
+function create_heart(){
+var heart=document.createElement("div");
+heart.className="heart";
+heart.innerHTML="❤";
 
+heart.style.left=Math.random()*100+"vw";
+heart.style.animationDuration=3+Math.random()*5+"s";
+heart.style.opacity=Math.random()*0.25+0.05;
+heart.style.fontSize=10+Math.random()*16+"px";
+
+document.body.appendChild(heart);
+
+setTimeout(()=>{
+heart.remove();
+},8000);
+}
+
+setInterval(create_heart,300);
 </script>
 
 </body>
